welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:5: error: Invalid literal number
		if (9r==nums(k)){
                    ^arrayCount9:8: error: ')' expected but '}' found.
	}
        ^