welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.code
def arrayCount9(nums:Array[Int]): Int = {
	var n:Int=nums.length
	var compteur=0
	for (k <- 0 to n-1){
		if (9r==nums(k)){
			compteur=compteur+1
		}
	}
	return compteur
}
